tests/ui/self/dispatch-from-dyn-zst-transmute.stderr
error[E0378]: implementing the `DispatchFromDyn` trait requires multiple coercions
  --> $DIR/dispatch-from-dyn-zst-transmute.rs:17:1
   |
LL | / impl<'a, T, U> DispatchFromDyn<Foo<'a, U>> for Foo<'a, T>
LL | |
LL | | where
LL | |     T: Unsize<U> + ?Sized,
LL | |     U: ?Sized {}
   | |_____________^
   |
   = note: the trait `DispatchFromDyn` may only be implemented for a coercion between structures with a single field being coerced
   = note: currently, 2 fields need coercions: `token` (`IsSendToken<T>` to `IsSendToken<U>`), `ptr` (`&'a T` to `&'a U`)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0378`.
